force-app/main/default/objects/clofor_com_cfs__Audit__c/clofor_com_cfs__Audit__c.object-meta.xml
<CustomObject>
    <label>Audit/INV Check</label>
    <nameField>
        <displayFormat>AD-{000000}</displayFormat>
        <label>Audit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit/INV Check</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>