force-app/main/default/objects/clofor_com_cfs__Audit__c/fields/clofor_com_cfs__ActualStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ActualStartDateTime__c</fullName>
    <label>Actual Start Date/Time</label>
    <type>DateTime</type>
</CustomField>