force-app/main/default/objects/clofor_com_cfs__Audit__c/fields/clofor_com_cfs__AuditName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AuditName__c</fullName>
    <label>Audit Name</label>
    <type>TextArea</type>
</CustomField>