force-app/main/default/objects/clofor_com_cfs__Audit__c/fields/clofor_com_cfs__InventoryPhysicalCountType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__InventoryPhysicalCountType__c</fullName>
    <label>Inventory Physical Counting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__InventoryPhysicalCountType</valueSetName>
    </valueSet>
</CustomField>