force-app/main/default/objects/clofor_com_cfs__Audit__c/fields/clofor_com_cfs__NumOfLocationAuditScope__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NumOfLocationAuditScope__c</fullName>
    <label>Number of Location in Audit Scope</label>
    <summaryForeignKey>clofor_com_cfs__AuditLoation__c.clofor_com_cfs__AuditID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>