force-app/main/default/objects/clofor_com_cfs__Audit__c/fields/clofor_com_cfs__NumOfLocationUnCounted__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NumOfLocationUnCounted__c</fullName>
    <label>Number of Location Uncounted</label>
    <summaryFilterItems>
        <field>clofor_com_cfs__AuditLoation__c.clofor_com_cfs__Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>clofor_com_cfs__AuditLoation__c.clofor_com_cfs__AuditID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>