force-app/main/default/objects/clofor_com_cfs__Audit__c/fields/clofor_com_cfs__ParentAuditID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ParentAuditID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Audit ID</label>
    <referenceTo>clofor_com_cfs__Audit__c</referenceTo>
    <relationshipLabel>CHILD AUDIT</relationshipLabel>
    <relationshipName>ParentAudit</relationshipName>
    <type>Lookup</type>
</CustomField>