force-app/main/default/objects/clofor_com_cfs__Audit__c/fields/clofor_com_cfs__PhysicalCountMethod__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PhysicalCountMethod__c</fullName>
    <label>Physical Count Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__PhysicalCountMethod</valueSetName>
    </valueSet>
</CustomField>