force-app/main/default/objects/clofor_com_cfs__Audit__c/fields/clofor_com_cfs__ScheduleStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ScheduleStartDateTime__c</fullName>
    <label>Schedule Start Date/Time</label>
    <type>DateTime</type>
</CustomField>