force-app/main/default/objects/clofor_com_cfs__Audit__c/recordTypes/clofor_com_cfs__InventoryCountargo.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__InventoryCountargo</fullName>
    <active>true</active>
    <description>Conduct inventory check for specific cargos.</description>
    <label>Inventory Count base on Cargo</label>
</RecordType>