force-app/main/default/objects/clofor_com_cfs__Audit__c/recordTypes/clofor_com_cfs__InventoryCountbyCompany.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__InventoryCountbyCompany</fullName>
    <active>true</active>
    <description>Conduct inventory check for all products related with the scope company.</description>
    <label>Inventory Count base on Scope Company</label>
</RecordType>