force-app/main/default/objects/clofor_com_cfs__Audit__c/recordTypes/clofor_com_cfs__InventoryCountbyLocation.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__InventoryCountbyLocation</fullName>
    <active>true</active>
    <description>Conduct inventory check for all products in one location.</description>
    <label>Inventory Count base on Locator</label>
</RecordType>