force-app/main/default/objects/clofor_com_cfs__Audit__c/recordTypes/clofor_com_cfs__InventoryCountByProduct.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__InventoryCountByProduct</fullName>
    <active>true</active>
    <description>Conduct inventory check for 1 product.</description>
    <label>Inventory Count base on Product</label>
</RecordType>