force-app/main/default/objects/clofor_com_cfs__Audit__c/recordTypes/clofor_com_cfs__PerformanceAudit.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__PerformanceAudit</fullName>
    <active>true</active>
    <description>Audit for process performance and compliance</description>
    <label>Performance Audit</label>
</RecordType>