force-app/main/default/objects/clofor_com_cfs__Audit__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__AuditName__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__AuditType__c</columns>
    <columns>clofor_com_cfs__Status__c</columns>
    <columns>clofor_com_cfs__ScopeFacilityID__c</columns>
    <columns>clofor_com_cfs__ScopeCompany__c</columns>
    <columns>clofor_com_cfs__Department__c</columns>
    <columns>clofor_com_cfs__InventoryPhysicalCountType__c</columns>
    <columns>clofor_com_cfs__PhysicalCountMethod__c</columns>
    <columns>clofor_com_cfs__DiecrepancyThreshold__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>